--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 testsuite/*/*/*                            no-precommit-check
 testsuite/*/*/*/*                          no-precommit-check
 testsuite/*/*/*/*/*                        no-precommit-check
+python3/tests/*/*                          no-precommit-check
+python3/tests/*                            no-precommit-check
 
 # Third-party package
 src/getRSS.c                               no-precommit-check
