Compute dynamically location of gnatcoll bindings build spaces

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,10 +63,11 @@ build_and_test_py39:
   script:
     - anod vcs --add-repo gnatcoll-bindings $CI_PROJECT_DIR
     - anod build --latest gnatcoll-bindings -Qpython=3.9
+    - BS=`anod info build gnatcoll-bindings -Qpython=3.9 --show build_space`
     - eval `anod printenv gnatcoll-bindings -Qpython=3.9 --build-env`
-    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/gnatcoll-bindings-py3/install/share/gpr:$GPR_PROJECT_PATH
+    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/$BS/install/share/gpr:$GPR_PROJECT_PATH
     - export ADA_PYTHON_HOME=/tmp/it/wave/x86_64-linux/tp-python_3.9/install
-    - ls /tmp/it/wave/x86_64-linux/gnatcoll-bindings-py3/install/share/gpr || ls -R /tmp/it/wave/x86_64-linux/
+    - ls /tmp/it/wave/x86_64-linux/$BS/install/share/gpr || ls -R /tmp/it/wave/x86_64-linux/
     - cd $CI_PROJECT_DIR/python3/tests && /it/e3/bin/python ./testsuite.py -v
 
 build_and_test_py310:
@@ -77,8 +78,9 @@ build_and_test_py310:
   script:
     - anod vcs --add-repo gnatcoll-bindings $CI_PROJECT_DIR
     - anod build --latest gnatcoll-bindings -Qpython=3.10
+    - BS=`anod info build gnatcoll-bindings -Qpython=3.10 --show build_space`
     - eval `anod printenv gnatcoll-bindings -Qpython=3.10 --build-env`
-    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/gnatcoll-bindings_py-3.10/install/share/gpr:$GPR_PROJECT_PATH
+    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/$BS/install/share/gpr:$GPR_PROJECT_PATH
     - export ADA_PYTHON_HOME=/tmp/it/wave/x86_64-linux/tp-python_3.10/install
     - cd $CI_PROJECT_DIR/python3/tests && /it/e3/bin/python ./testsuite.py -v
 
@@ -90,8 +92,9 @@ build_and_test_py311:
   script:
     - anod vcs --add-repo gnatcoll-bindings $CI_PROJECT_DIR
     - anod build --latest gnatcoll-bindings -Qpython=3.11
+    - BS=`anod info build gnatcoll-bindings -Qpython=3.11 --show build_space`
     - eval `anod printenv gnatcoll-bindings -Qpython=3.11 --build-env`
-    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/gnatcoll-bindings_py-3.11/install/share/gpr:$GPR_PROJECT_PATH
+    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/$BS/install/share/gpr:$GPR_PROJECT_PATH
     - export ADA_PYTHON_HOME=/tmp/it/wave/x86_64-linux/tp-python/install
     - cd $CI_PROJECT_DIR/python3/tests && /it/e3/bin/python ./testsuite.py -v
 
@@ -103,8 +106,9 @@ build_and_test_py312:
   script:
     - anod vcs --add-repo gnatcoll-bindings $CI_PROJECT_DIR
     - anod build --latest gnatcoll-bindings -Qpython=3.12
+    - BS=`anod info build gnatcoll-bindings -Qpython=3.12 --show build_space`
     - eval `anod printenv gnatcoll-bindings -Qpython=3.12 --build-env`
-    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/gnatcoll-bindings_py-3.12/install/share/gpr:$GPR_PROJECT_PATH
+    - export GPR_PROJECT_PATH=/tmp/it/wave/x86_64-linux/$BS/install/share/gpr:$GPR_PROJECT_PATH
     - export ADA_PYTHON_HOME=/tmp/it/wave/x86_64-linux/tp-python_3.12/install
     - cd $CI_PROJECT_DIR/python3/tests && /it/e3/bin/python ./testsuite.py -v
 
