Bindings transition from python 3.11 to 3.13
Fix ada method descriptor creation in Cpython: since python3.12
the ada method descriptor type must be properly defined and
handle computation of __name__ and __qualname__.

Fix internal testsuite related to API changes of e3 and
add a test.

Fix CI using old component names

Depends-On: eng/shared/anod!7814

For eng/ide/gnatstudio#486

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,9 +59,9 @@ build_and_test:
   interruptible: true
   parallel:
     matrix:
-      - PYTHON: ["3.9", "3.10", "3.11", "3.12"]
+      - PYTHON: ["3.9", "3.10", "3.11", "3.12", "3.13"]
   script:
-    - anod test  --latest gnatcoll-bindings -Qpython=$PYTHON
+    - anod test  --latest gnatcoll-bindings-python3 -Qpython=$PYTHON
     - testsuite_reports
   artifacts:
     reports:
